# hipacc

./: .gitmodules  AUTHORS  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE  README.md  TODO  dependencies.sh
.github/: run_all.ps1  run_all.sh  run_build.ps1  run_build.sh  run_package.ps1  run_package.sh  run_tests.ps1  run_tests.sh
cmake/: hipacc-config.cmake.in  hipacc-functions.cmake
compiler/: CMakeLists.txt  hipacc.cpp  hipacc.h
doc/: Doxyfile_Backend  INSTALL.md  INTEGRATION.md
documentation/: 01_installation.tex  02_dsl.tex  03_compiler.tex  Makefile  acronyms.tex  documentation.tex  format.tex  hipacc_documentation.tex  literature.bib
dsl/: domain.hpp  hipacc.hpp  hipacc_cuda_interpolate.hpp  hipacc_cuda_vec.hpp  hipacc_ocl_interpolate.hpp  hipacc_ocl_red.hpp  image.hpp  iterationspace.hpp  kernel.hpp  mask.hpp  math_functions.hpp  pyramid.hpp  types.hpp
lib/: CMakeLists.txt
lib/AST/: ASTClone.cpp  ASTFuse.cpp  ASTNode.cpp  ASTTranslate.cpp  BorderHandling.cpp  CMakeLists.txt  Convolution.cpp  Interpolate.cpp  MemoryAccess.cpp
lib/Analysis/: CMakeLists.txt  HostDataDeps.cpp  KernelStatistics.cpp  Polly.cpp
lib/Backend/: BackendConfigurationManager.cpp  CMakeLists.txt  CPU_x86.cpp  CUDA.cpp  ClangASTHelper.cpp  Filterscript.cpp  InstructionSets.cpp  OpenCL_ACC.cpp  OpenCL_CPU.cpp  OpenCL_GPU.cpp  Renderscript.cpp  VectorizationAST.cpp  Vectorizer.cpp
lib/Config/: CMakeLists.txt  CompilerOptions.cpp
lib/DSL/: CMakeLists.txt  ClassRepresentation.cpp
lib/Device/: Builtins.cpp  CMakeLists.txt
lib/Rewrite/: CMakeLists.txt  CreateHostStrings.cpp  Rewrite.cpp
lib/Runtime/: Base.cpp  CMakeLists.txt  CPU.cpp  CUDA.cpp  OpenCL.cpp  Renderscript.cpp
lib/Vectorization/: CMakeLists.txt  SIMDTypes.cpp
res/: hipacc.icns
samples-public/: CMakeLists.txt  CMakeLists.txt.in  readme.txt
samples-public/0_Point_Operators/Color_Conversion/: CMakeLists.txt
samples-public/0_Point_Operators/Color_Conversion/src/: main.cpp
samples-public/0_Point_Operators/Scaling/: CMakeLists.txt
samples-public/0_Point_Operators/Scaling/src/: main.cpp
samples-public/0_Point_Operators/Windowing/: CMakeLists.txt
samples-public/0_Point_Operators/Windowing/src/: main.cpp
samples-public/1_Local_Operators/Box_Blur/: CMakeLists.txt
samples-public/1_Local_Operators/Box_Blur/src/: main.cpp
samples-public/1_Local_Operators/Box_Blur_RGBA/src/: main.cpp
samples-public/1_Local_Operators/Dilate/src/: main.cpp
samples-public/1_Local_Operators/Dilate_RGBA/src/: main.cpp
samples-public/1_Local_Operators/Erode/src/: main.cpp
samples-public/1_Local_Operators/Erode_RGBA/: CMakeLists.txt
samples-public/1_Local_Operators/Erode_RGBA/src/: main.cpp
samples-public/1_Local_Operators/Gaussian_Blur/src/: main.cpp
samples-public/1_Local_Operators/Gaussian_Blur_RGBA/: CMakeLists.txt
samples-public/1_Local_Operators/Gaussian_Blur_RGBA/src/: main.cpp
samples-public/1_Local_Operators/Laplace/: CMakeLists.txt
samples-public/1_Local_Operators/Laplace/src/: main.cpp
samples-public/1_Local_Operators/Laplace_RGBA/: CMakeLists.txt
samples-public/1_Local_Operators/Laplace_RGBA/src/: main.cpp
samples-public/1_Local_Operators/Unsharp/: CMakeLists.txt
samples-public/1_Local_Operators/Unsharp/src/: main.cpp
samples-public/2_Global_Operators/Histogram/: CMakeLists.txt
samples-public/2_Global_Operators/Histogram/src/: main.cpp
samples-public/2_Global_Operators/Reduction_Max/src/: main.cpp
samples-public/2_Global_Operators/Reduction_Sum/: CMakeLists.txt
samples-public/2_Global_Operators/Reduction_Sum/src/: main.cpp
samples-public/3_Preprocessing/Bilateral_Filter/: CMakeLists.txt
samples-public/3_Preprocessing/Bilateral_Filter/src/: main.cpp
samples-public/3_Preprocessing/Bilateral_Filter_RGBA/: CMakeLists.txt
samples-public/3_Preprocessing/Bilateral_Filter_RGBA/src/: main.cpp
samples-public/3_Preprocessing/Harris_Corner/: CMakeLists.txt
samples-public/3_Preprocessing/Harris_Corner/src/: main.cpp
samples-public/3_Preprocessing/Optical_Flow/: CMakeLists.txt
samples-public/3_Preprocessing/Optical_Flow/src/: main.cpp
samples-public/3_Preprocessing/ShiTomasi_Corner/src/: main.cpp
samples-public/3_Preprocessing/Sobel/: CMakeLists.txt
samples-public/3_Preprocessing/Sobel/src/: main.cpp
samples-public/3_Preprocessing/Sobel_RGBA/: CMakeLists.txt
samples-public/3_Preprocessing/Sobel_RGBA/src/: main.cpp
samples-public/4_Postprocessing/Bokeh_Effect/: CMakeLists.txt
samples-public/4_Postprocessing/Bokeh_Effect/src/: main.cpp
samples-public/4_Postprocessing/Chromatic_Abberation/src/: main.cpp
samples-public/4_Postprocessing/Night_Filter/src/: main.cpp
samples-public/5_Other/Game_of_Life/: CMakeLists.txt
samples-public/5_Other/Game_of_Life/src/: main.cpp
samples-public/5_Other/Gaussian_Laplacian_Pyramid/: CMakeLists.txt
samples-public/5_Other/Gaussian_Laplacian_Pyramid/src/: main.cpp
samples-public/5_Other/Mandelbrot/: CMakeLists.txt
samples-public/5_Other/Mandelbrot/src/: main.cpp
samples-public/5_Other/Motion_Interpolation/: CMakeLists.txt
samples-public/5_Other/Motion_Interpolation/src/: main.cpp
samples-public/5_Other/WCE_Enhance/src/: main.cpp
samples-public/6_Test/: CMakeLists.txt
samples-public/6_Test/Kernel_Fusion_L2L/src/: main.cpp
samples-public/6_Test/Kernel_Fusion_L2P/: CMakeLists.txt
samples-public/6_Test/Kernel_Fusion_L2P/src/: main.cpp
samples-public/6_Test/Kernel_Fusion_Mixed/src/: main.cpp
samples-public/6_Test/Kernel_Fusion_P2L/: CMakeLists.txt
samples-public/6_Test/Kernel_Fusion_P2L/src/: main.cpp
samples-public/6_Test/Kernel_Fusion_P2P/: CMakeLists.txt
samples-public/6_Test/Kernel_Fusion_P2P/src/: main.cpp
samples-public/common/: Android.mk  hipacc_helper.hpp
samples-public/common/config/: common.conf  cpu-avx.conf  cpu-avx2.conf  cpu-scalar.conf  cpu-sse4.2.conf  cuda-fusion.conf  cuda-graph.conf  cuda-local.conf  cuda-ppt.conf  cuda.conf  opencl-acc.conf  opencl-gpu.conf  renderscript.conf
tools/: CMakeLists.txt  cl_bandwidth_test.cc  cl_compile.cc  ocl_bandwidth_test.cc  ocl_compile.cc
(+230 files in other folders)
